@@ -22,18 +22,18 @@ set mem_amount=%2
 set mem_unit=%mem_amount:~-1%
 set mem_amount=%mem_amount:~0,-1%
 set gc_flags=%~dp0\flags\g1gc.txt
-set common_flags=@%~dp0\flags\common8.txt
+set common_flags=@%~dp0\flags\common.txt
 
 if /i "%mem_unit%" == "G" if %mem_amount% GTR 12    set gc_flags=%~dp0\flags\g1gc.gt12.txt
 if /i "%mem_unit%" == "M" if %mem_amount% GTR 12000 set gc_flags=%~dp0\flags\g1gc.gt12.txt
 if %preset_java_version% GEQ 11 (
-  set common_flags=%common_flags% @%~dp0\flags\common11.txt
+  set common_flags=%common_flags% -XX:+UseVectorCmov
 )
 if %preset_java_version% GEQ 17 (
-  set common_flags=%common_flags% @%~dp0\flags\common17.txt
+  set common_flags=%common_flags% --add-modules jdk.incubator.vector
   if %NUMBER_OF_PROCESSORS% GEQ 8 (
-    if %is_fixedmem% == 1 set gc_flags=%~dp0\flags\sgc.txt
-    if %is_fixedmem% == 0 set gc_flags=%~dp0\flags\sgc.min.txt
+    if %is_fixedmem% == 1 set gc_flags=%~dp0\flags\zgc.txt
+    if %is_fixedmem% == 0 set gc_flags=%~dp0\flags\zgc.min.txt
   )
 )
 if %preset_java_version% GEQ 21 (
